<resources>

    <string name="app_name">Messu</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="sign_up">Sign up</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>

    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="password">Password</string>

    <string name="menu_chats">Chats</string>
    <string name="menu_new_chat">New chat</string>
    <string name="menu_profile">Profile</string>

    <string name="personalization">Personalization</string>
    <string name="language">Language</string>
    <string name="statistics">Statistics</string>
    <string name="settings">Settings</string>
    <string name="ask_question">Ask the admin a question</string>

    <string name="no_chat_1">Looks like you don\'t have any chats yet.</string>
    <string name="no_chat_2">Click to create.</string>

    <string name="no_account_1">New to here?</string>
    <string name="no_account_2">Sign up</string>

    <string name="user_net_status_online">Online</string>
    <string name="user_net_status_offline">was online at </string>

    <string name="type_message">Type your message...</string>
    <string name="change_language">are you want change language?</string>

    <string name="english">English</string>
    <string name="russian">Russian</string>

    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="create_chat">Chat created</string>
    <string name="development">In development...</string>
    <string name="errorValue">Incorrect data entered</string>

    <string name="apply">Apply</string>
    <string name="user">User</string>

    <string name="textSize">Text size</string>
    <string name="textColor">Text color</string>
    <string name="color_m">Color mine</string>
    <string name="color_y">Color your</string>

</resources>